--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "pydantic>=2.5.0",
     "pyyaml>=6.0",
-    "sqlalchemy>=2.0.0",
+    "fsspec>=2023.12.0",
+    "s3fs>=2023.12.0",
 ]
 
 [project.optional-dependencies]
