--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,4 +16,4 @@ services:
     volumes:
       - ./web/src:/app/src
     environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      - VITE_API_BASE_URL=http://localhost:8000/api/v1
